  return the proper failure return value (1). Patch contributed by Jeff Knupp.

- Issue #15229: An OSError subclass whose __init__ doesn't call back
  OSError.__init__ could produce incomplete instances, leading to crashes
  when calling str() on them.

- Issue 15307: Virtual environments now use symlinks with framework builds
  on Mac OS X, like other POSIX builds.

Library
-------

- Issue #15499: Launching a webbrowser in Unix used to sleep for a few
  seconds.  Original patch by Anton Barkovsky.
  
- Issue #15463: the faulthandler module truncates strings to 500 characters,
  instead of 100, to be able to display long file paths

- Issue #6056: Make multiprocessing use setblocking(True) on the
  sockets it uses.  Original patch by J Derek Wilson.

- Issue #15364: Fix sysconfig.get_config_var('srcdir') to be an
  absolute path.

- Issue #15041: update "see also" list in tkinter documentation.

- Issue #15413: os.times() had disappeared under Windows.

- Issue #15402: An issue in the struct module that caused sys.getsizeof to
  return incorrect results for struct.Struct instances has been fixed.
  Initial patch by Serhiy Storchaka.

- Issue #15232: when mangle_from is True, email.Generator now correctly mangles
  lines that start with 'From ' that occur in a MIME preamble or epilogue.

- Issue #15094: Incorrectly placed #endif in _tkinter.c.
  Patch by Serhiy Storchaka.

- Issue #13922: argparse no longer incorrectly strips '--'s that appear
  after the first one.

- Issue #12353: argparse now correctly handles null argument values.

- Issues #10017 and #14998: Fix TypeError using pprint on dictionaries with
  user-defined types as keys or other unorderable keys.

- Issue #15397: inspect.getmodulename() is now based directly on importlib
  via a new importlib.machinery.all_suffixes() API.

- Issue #14635: telnetlib will use poll() rather than select() when possible
  to avoid failing due to the select() file descriptor limit.
